# new-tee-os

./: Cargo.toml  README.md
.cargo/: config
SGX/: .gitignore  Makefile
SGX/app/: Cargo.toml  build.rs
SGX/app/src/: main.rs
SGX/elfloader/: Cargo.toml
SGX/elfloader/src/: elfloader.rs  lib.rs  rsrvmalloc.rs
SGX/enclave/: Cargo.toml  Enclave.edl  Enclave.lds  Makefile
SGX/enclave/src/: lib.rs
SGX/lib/sgx_urts/: Cargo.toml
SGX/lib/spinning_top/: .cargo_vcs_info.json  Cargo.toml
SGX/lib/spinning_top/src/: lib.rs
SGX/lib/syscalls/: Makefile  ocall.c
SGX/linux-abi/: Cargo.toml
SGX/linux-abi/src/: lib.rs
SGX/linux-abi/src/syscall/: fs.rs  process.rs
SGX/sgx-cfg/: Cargo.toml
SGX/sgx-cfg/src/: lib.rs
SGX/sgx-hal/: Cargo.toml
SGX/sgx-hal/src/: edge.rs  lib.rs
SGX/sgx-rt/: Cargo.toml
SGX/sgx-rt/src/: lib.rs  panic.rs  syscall.rs  trap.rs  uart.rs
SGX/sgxrt/: Cargo.toml  Enclave.edl
SGX/sgxrt/src/linux-abi/src/: lib.rs
SGX/sgxrt/src/linux-abi/src/syscall/: fs.rs  process.rs
SGX/sgxrt/src/sgx-cfg/: Cargo.toml
SGX/sgxrt/src/sgx-hal/: Cargo.toml
SGX/sgxrt/src/sgx-rt/src/: syscall.rs  trap.rs
SGX/sgxrunner/: Cargo.toml  build.rs
edge-lib/: Cargo.toml
edge-lib/src/: edge.rs  info.rs  lib.rs
edge-lib/src/kernel/: caller.rs  console.rs  file.rs
edge-responder/: Cargo.toml
edge-responder/src/: edge_file.rs  lib.rs
elf-loader/: .gitignore  Cargo.toml
elf-loader/src/: arch.rs  elf_loader.rs  lib.rs
elfloader/: Cargo.toml
elfloader/src/: elfloader.rs  lib.rs
hal/: Cargo.toml
hal/src/: lib.rs  mem.rs
hal/src/arch/: mod.rs
hal/src/arch/keystone/: mod.rs  sbi.rs
hal/src/arch/keystone/vm/: mod.rs
hal/src/arch/x86_vm/: mod.rs  qemu.rs  security.rs  tss.rs
hal/src/edge/: edge.rs  info.rs  mod.rs
hal/src/edge/kernel/: caller.rs  console.rs  file.rs  mod.rs
hal/src/kernel/: mod.rs
hal/src/kernel/task/: mod.rs  pid_pool.rs
hal/src/sys/: mod.rs
hal/src/sys/keystone/: mod.rs
hal/src/sys/keystone/rt/: edge.rs  mem.rs  mod.rs  task.S  task.rs
hal/src/sys/x86_vm/: cfg.rs  edge.rs  mem.rs  mod.rs  task.asm  task.rs
keystone-cfg/: Cargo.toml
keystone-cfg/src/: lib.rs
keystone-hal/: Cargo.toml
keystone-hal/src/: cfg.rs  edge.rs  edge_syscall.rs  lib.rs  rt.rs  sbi.rs
keystone-hal/src/riscv/: addr.rs  test.rs
keystone-hal/src/rt/: edge.rs  edge_con.rs  edge_reader.rs  mod.rs
keystone-hal/src/vm/: pagetable.rs
keystone-rt/: Cargo.toml  rust-toolchain
keystone-rt-runner/: Cargo.toml  rust-toolchain
keystone-rt-runner/.cargo/: config
keystone-rt-runner/src/: edge_call.rs  edge_file.rs  edge_reader.rs  main.rs
keystone-rt-runner/src/keystone/: ioctl.rs  mod.rs
keystone-rt-runner/src/riscv/: pagetable.rs
keystone-rt/.cargo/: config
keystone-rt/src/: elf.rs  entry.rs  frame.rs  klog.rs  main.rs  panic.rs  sbi.rs  syscall.rs  trap.rs  uart.rs  vm.rs
keystone-rt/src/asm/: entry.S  trap.S
keystone-rt/src/lds/: keystone.lds
keystone-rt/src/syscall/: fs.rs  mod.rs  process.rs
keystone-rt/src/vm/: init.rs  mod.rs  page_fault.rs
kmalloc/: Cargo.toml  rust-toolchain
kmalloc/src/: leaky_slab.rs  lib.rs  linked_list.rs  non_reentrant.rs
linux-abi/: Cargo.toml  rust-toolchain
linux-abi/src/: hal.rs  hal_shim.rs  lib.rs
linux-abi/src/syscall/: fs.rs  listing.rs  mod.rs  process.rs  tables.rs
new-tee-os-sgx/: Makefile
new-tee-os-sgx/app/: Cargo.toml
new-tee-os-sgx/app/src/: main.rs  process.rs
new-tee-os-sgx/enclave/: Cargo.toml  Enclave.edl  Enclave_t.c  Makefile
new-tee-os-sgx/enclave/src/: lib.rs
new-tee-os-sgx/enclave/src/elfloader/: Cargo.toml
new-tee-os-sgx/enclave/src/elfloader/src/: elfloader.rs
new-tee-os-sgx/enclave/src/linux-abi/: Cargo.toml
new-tee-os-sgx/enclave/src/linux-abi/src/: lib.rs
new-tee-os-sgx/enclave/src/sgx-rt/src/: syscall.rs
new-tee-os-sgx/sgxrt/: Makefile
new-tee-os-sgx/sgxrt/src/: lib.rs
new-tee-os-sgx/sgxrt/src/elfloader/: Cargo.toml
new-tee-os-sgx/sgxrt/src/elfloader/src/: lib.rs  rsrvmalloc.rs
new-tee-os-sgx/sgxrt/src/linux-abi/: Cargo.toml
new-tee-os-sgx/sgxrt/src/sgx-cfg/src/: lib.rs
new-tee-os-sgx/sgxrt/src/sgx-hal/src/: lib.rs
new-tee-os-sgx/sgxrt/src/sgx-rt/: Cargo.toml
new-tee-os-sgx/sgxrt/src/sgx-rt/src/: lib.rs
new-tee-os-sgx/sgxrunner/: Cargo.toml  build.rs
new-tee-os-sgx/sgxrunner/src/: main.rs
nto-builder/: Cargo.toml
nto-builder/src/: main.rs
scripts/: ks-push-rt  ks-qemu  run-ks
tests/riscv-hello-world/: Cargo.toml  rust-toolchain
tests/riscv-hello-world/.cargo/: config
tests/riscv-hello-world/src/: ks-user.lds  main.rs
tests/x64-hello-world/: Cargo.toml  x86_64-unknown-none-elf.json
tests/x64-hello-world/.cargo/: config.toml
tests/x64-hello-world/src/: main.rs  x86-user.lds
x86-vm-kernel/: Cargo.toml  x86_64-unknown-none-elf.json
x86-vm-kernel/.cargo/: config.toml
x86-vm-kernel/src/: com.rs  heap.rs  klog.rs  main.rs  memory.rs  panic.rs  qemu.rs  syscall.rs  user.rs
x86-vm-kernel/src/asm/: syscall.asm
x86-vm-kernel/src/interrupt/: devices.rs  gdt.rs  idt.rs  mod.rs  pic.rs  tss.rs
x86-vmm-qemu/: Cargo.toml
x86-vmm-qemu/src/: edge_call.rs  main.rs
