[package]
name = "hal"
version = "0.1.0"
edition = "2018"

[features]
kernel = ["spin"]
# Keystone part
keystone = []
keystone-rt = ["kernel", "keystone", "riscv"]
# x86 VM part
x86-vm = []
x86-vm-kernel = ["kernel", "x86-vm", "lazy_static", "uart_16550", "x86_64"]
async-edge = ["async-trait"]

[dependencies]
cfg-if = "1.0.0"
memoffset = "0.6.4"
# no-std for num_enum
num_enum = { version = "0.5.3", default-features = false }
riscv = { version = "0.7.0", features = ["inline-asm"], optional = true }
spin = { version = "0.9.2", optional = true }
static_assertions = "1.1.0"

# x86 VM related things
async-trait = { version = "0.1.51", optional = true }
lazy_static = { version = "1.4.0", features = ["spin_no_std"], optional = true }
uart_16550 = { git = "https://github.com/Kazurin-775/uart_16550.git", rev = "080ae35", optional = true }
x86_64 = { version = "0.14.4", optional = true }
