[package]
name = "keystone-hal"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["rlib"]

[features]
rt = ["riscv"]

[dependencies]
keystone-cfg = { path = "../keystone-cfg" }
# no-std for num_enum
num_enum = { version = "0.5", default-features = false }
riscv = { version = "0.6.0", features = ["inline-asm"], optional = true }
static_assertions = "1.1.0"
