[package]
name = "keystone-rt"
version = "0.1.0"
edition = "2018"

[dependencies]
keystone-cfg = { path = "../keystone-cfg" }
keystone-hal = { path = "../keystone-hal", features = ["rt"] }
kmalloc = { path = "../kmalloc" }
linux-abi = { path = "../linux-abi", features = ["keystone"] }
log = "0.4.14"
riscv = { version = "0.6.0", features = ["inline-asm"] }
