[package]
name = "keystone-rt"
version = "0.1.0"
edition = "2018"

[dependencies]
elf-loader = { path = "../elf-loader" }
executor = { git = "https://github.com/rcore-os/executor.git", rev = "04b6b7b" }
hal = { path = "../hal", features = ["keystone-rt"] }
kmalloc = { path = "../kmalloc" }
linux-abi = { path = "../linux-abi", features = ["keystone"] }
log = "0.4.14"
riscv = { version = "0.6.0", features = ["inline-asm"] }
spin = "0.9.1"

# enable no-std in phf
[dependencies.phf]
version = "0.9.0"
default-features = false
features = ["macros"]
