[package]
name = "linux-abi"
version = "0.1.0"
edition = "2018"

[features]
default = ["keystone"]
keystone = ["keystone-hal"]

[dependencies]
keystone-hal = { path = "../keystone-hal", features = ["rt"], optional = true }
log = "0.4.14"

# enable no-std in phf
[dependencies.phf]
git = "https://github.com/Kazurin-775/rust-phf.git"
rev = "171f1f59"
default-features = false
features = ["macros"]
