[package]
name = "x86-vm-kernel"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.10.7"
elf-loader = { path = "../elf-loader" }
hal = { path = "../hal", features = ["x86-vm-kernel"] }
kmalloc = { path = "../kmalloc" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.14"
pic8259 = "0.10.1"
spin = "0.9.2"
x86_64 = "0.14.4"

[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = "0xFFFF_FFF0_0000_0000"
kernel-stack-address = "0xFFFF_FFFF_FFF8_0000"
