[package]
name = "x86-vmm-qemu"
version = "0.1.0"
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["unstable"] }
bootloader-locator = "0.0.4"
env_logger = "0.9.0"
futures-lite = "1.12.0"
locate-cargo-manifest = "0.2.2"
log = "0.4.14"
tokio = { version = "1.9.0", features = ["rt", "macros"] }
