[package]
name = "elfloader"
version = "0.1.0"
authors = ["zjuliangxun <m13009809900@163.com>"]
edition = "2018"

[dependencies]
goblin = { version = "0.4" , default-features = false , features = ["elf32", "elf64", "endian_fd"]}
libc = "0.2.95"
sgx-rt = {path = "../sgx-rt"}
linked_list_allocator = {version = "0.9.0"}
lock_api = {version = "0.4.4" , features=["nightly"]}
spinning_top = {version = "0.2.4",features=["nightly"]}

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.crates-io]
lock_api = {path = "../lib/spinning_top/" , features=["nightly"]}