[package]
name = "sgx-rt"
version = "0.1.0"
authors = ["zjuliangxun <m13009809900@163.com>"]
edition = "2018"

[dependencies]
linux-abi ={ path = "../linux-abi"}

[dependencies.phf]
git = "https://github.com/Kazurin-775/rust-phf.git"
rev = "171f1f59"
default-features = false
features = ["macros"]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
