[package]
name = "sgxrunner"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"

[dependencies]
nix = "0.20.0"
libc = "0.2.95"
log = "0.4.14"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../sgx_types" }
sgx_urts = { path = "../../sgx_urts" }
sgx_tstd = { path = "../../sgx_tstd" }