[package]
name = "sgx-rt"
version = "0.1.0"
authors = ["zjuliangxun <m13009809900@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-abi ={ path = "../linux-abi"}

[dependencies.phf]
git = "https://github.com/Kazurin-775/rust-phf.git"
rev = "171f1f59"
default-features = false
features = ["macros"]